--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -53,7 +53,8 @@
     <span style="text-decoration: underline;font-size: 10px">(назва спеціальності)</span><br>
     <span style="text-decoration: underline">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&emsp;</span>
     &emsp;&emsp;
-    <span style="text-decoration: underline">&emsp;&emsp;&emsp;Огороднік Д.В.&emsp;&emsp;&emsp;</span><br>
+    <span style="text-decoration: underline">&emsp;&emsp;&emsp;Дацко Б.В.&emsp;&emsp;&emsp;</span><br>
+    <span style="text-decoration: underline">&emsp;&emsp;&emsp;Романюк О.В&emsp;&emsp;&emsp;</span><br>
 </p>
 <p align="center" style=" font-size: 12px;margin-left:200px;margin-bottom: -15px">
     <span style="text-decoration: underline;font-size: 10px">(підпис)</span>
@@ -66,7 +67,7 @@
     &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
     <span style="text-decoration: underline; font-size: 10px">(прізвище, ініціали)</span><br>
     Нормоконтролер&emsp;
-    <span style="text-decoration: underline">&emsp;&emsp;&emsp; Комісарчук В.В.&emsp;&emsp;&emsp;</span><br>
+    <span style="text-decoration: underline">&emsp;&emsp;&emsp; Дмитращук К.М. &emsp;&emsp;&emsp;</span><br>
 </p>
 <p align="center" style=" font-size: 12px;margin-left:200px;margin-bottom: -15px">
     &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
@@ -99,7 +100,7 @@
 
 <br>
 <p align = "center" style="font-size: 12px">Чернівці–20
-    <span style="text-decoration: underline">18</span></p>
+    <span style="text-decoration: underline">19</span></p>
 
 
 
